<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/home"
        android:icon="@drawable/ic_home_foreground"
        android:id="@+id/navhome"/>
    <item
        android:title="@string/explore_india"
        android:icon="@drawable/ic_explore_foreground"
        android:id="@+id/navexplore"/>
    <item
        android:title="@string/create_tour"
        android:icon="@drawable/ic_create_foreground"
        android:id="@+id/navcreate"/>
    <item
        android:title="@string/why_book_us"
        android:icon="@drawable/ic_book_foreground"
        android:id="@+id/navwhybookus"/>
    <item
        android:title="@string/contact_us"
        android:icon="@drawable/ic_contact_foreground"
        android:id="@+id/navcontactus"/>



</menu>